Fix nav links spacing

--- a/css/predefined.css
+++ b/css/predefined.css
@@ -76,7 +76,7 @@ body {
   font-weight: 500;
   opacity: 0.85;
   text-align: left;
-  width: 70px;
+  /* width: 70px; */
 }
 
 .paragraph {
@@ -187,7 +187,7 @@ body {
   font-weight: 500;
   opacity: 0.85;
   text-align: left;
-  width: 70px;
+  /* width: 70px; */
 }
 
 .paragraph {
